--- a/_includes/cta_buttons.html
+++ b/_includes/cta_buttons.html
@@ -1,5 +1,6 @@
 <div class="page__cta">
-  <a class="btn btn--primary" href="/contact/">Contact</a>
-  <a class="btn" href="/speaking/">Speaking</a>
-  <a class="btn" href="/consulting/">Consulting</a>
+  <a class="btn btn--primary" href="{{ '/contact/'   | relative_url }}">Contact</a>
+  <a class="btn"               href="{{ '/speaking/'  | relative_url }}">Speaking</a>
+  <a class="btn"               href="{{ '/consulting/'| relative_url }}">Consulting</a>
 </div>
+
